# MAVSDK-Rust

./: Cargo.toml  README.md  build.rs
examples/: info.rs  mocap.rs  takeoff_and_land.rs  telemetry.rs
src/: lib.rs
src/grpc/: mavsdk.options.rs  mavsdk.rpc.action.rs  mavsdk.rpc.calibration.rs  mavsdk.rpc.camera.rs  mavsdk.rpc.core.rs  mavsdk.rpc.geofence.rs  mavsdk.rpc.gimbal.rs  mavsdk.rpc.info.rs  mavsdk.rpc.mission.rs  mavsdk.rpc.mocap.rs  mavsdk.rpc.offboard.rs  mavsdk.rpc.param.rs  mavsdk.rpc.shell.rs  mavsdk.rpc.telemetry.rs
