[package]
name = "libmavsdk"
version = "0.1.0"
authors = ["Ildar Sadykov <irsdkv@gmail.com>"]
edition = "2021"
rust-version = "1.65.0"

[dependencies]
tonic = "0.10.2"
prost = "0.12.1"
prost-reflect = {version = "0.13.1", features = ["derive"]}

thiserror = "1.0.30"
futures-util = { version = "0.3.17", default-features = false }
once_cell = "1.19.0"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["rt-multi-thread", "macros", "time"] }

[build-dependencies]
prost-build = "0.12.4"
tonic-build = "0.10.2"
prost-reflect-build = "0.13.0"
