[package]
name = "libmavsdk"
version = "0.1.0"
authors = ["Ildar Sadykov <irsdkv@gmail.com>"]
edition = "2021"
rust-version = "1.78.0"

[dependencies]
tonic = "0.11.0"
prost = "0.12.6"
prost-reflect = {version = "0.13.1", features = ["derive"]}

thiserror = "1.0.61"
futures-util = { version = "0.3.30", default-features = false }
once_cell = "1.19.0"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "time"] }

[build-dependencies]
prost-build = "0.12.6"
tonic-build = "0.11.0"
prost-reflect-build = "0.13.0"
